Fix overflow issue
Before this change, when the browser width was less that 1200px, the map would extend beyond the boundaries of its main container. Now, it will scale proportionately to the browser's width.

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ h2 {
 
 /* Map Section - Enlarged by 50% */
 #map { 
-    width: 1200px;
+    width: 100%;
     height: 900px;
     position: relative;
     margin: 0 auto; /* Center the map */
@@ -257,10 +257,6 @@ h2 {
 .mapboxgl-popup-content {
     border-radius: 5px !important;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1) !important;
-}
-
-.mapboxgl-canvas {
-    width: 1200px !important;
 }
 
 #toggleDINSContainer {
